fix: reduce empty space in alignments
fixes #51

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -15,7 +15,7 @@
 
 .alignment {
   width: 350px;
-  height: 200px;
+  height: 150px;
 }
 
 .alignment + .alignment {
